# OpenTransitAndMobility

./: .env.example  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
crates/actors/: Cargo.toml  Readme.md
crates/actors/examples/: counter.rs
crates/actors/src/: actor.rs  actor_ref.rs  handler.rs  lib.rs  mailbox.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0001_database.sql  0002_realtime.sql  0003_shared_mobility.sql  0004_collectors.sql
crates/database/src/: lib.rs
crates/database/src/data_model/: agency.rs  calendar.rs  calendar_exception.rs  collector.rs  line.rs  location.rs  mod.rs  origin.rs  shape.rs  shared_mobility.rs  stop.rs  trip.rs  trip_update.rs
crates/database/src/queries/: agency.rs  collector.rs  line.rs  mod.rs  origin.rs  service.rs  shape.rs  shared_mobility.rs  stop.rs  trip.rs  trip_update.rs
crates/deutsche_bahn/: Cargo.toml
crates/deutsche_bahn/src/: client.rs  collector.rs  lib.rs  station_data.rs  timetables.rs  triptable.rs
crates/deutsche_bahn/src/model/: mod.rs  station_data.rs  timetables.rs
crates/gbfs/: Cargo.toml
crates/gbfs/src/: collector.rs  lib.rs
crates/gtfs/: Cargo.toml  README.md  build.rs
crates/gtfs/protobuf/: gtfs-realtime.proto
crates/gtfs/src/: collector.rs  database.rs  lib.rs  realtime.rs  serde.rs
crates/gtfs/src/data_model/: agency.rs  calendar.rs  calendar_dates.rs  frequencies.rs  mod.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  transfers.rs  trips.rs
crates/gtfs/src/domain_model/: shape.rs
crates/model/: Cargo.toml
crates/model/src/: agency.rs  calendar.rs  lib.rs  line.rs  origin.rs  shape.rs  shared_mobility.rs  stop.rs  trip.rs  trip_instance.rs  trip_update.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/public_transport/: Cargo.toml
crates/public_transport/src/: client.rs  collector.rs  database.rs  lib.rs  server.rs
crates/utility/: Cargo.toml
crates/utility/src/: edit_distance.rs  geo.rs  id.rs  let_also.rs  lib.rs  serde.rs
crates/web/: Cargo.toml
crates/web/src/: common.rs  hateoas.rs  lib.rs  main.rs
crates/web/src/api/: mod.rs
crates/web/src/api/v1/: agencies.rs  lines.rs  mod.rs  realtime.rs  stops.rs  trips.rs
crates/web/src/middleware/: base_url.rs
documentation/: data-sources.md  related-work.md
resources/www/: index.html  index.js  mapstyle-dark.json  mapstyle-light.json  searchbar.css  style.css
resources/www/images/: stop-marker.xcf
resources/www/modules/: client.js  utililty.js
resources/www/modules/ui/: searchbar.js
scripts/docker/: debian-build-deps.sh  debian-runtime-deps.sh  fedora-build-deps.sh  place-dummy-files.sh
tile_server/: Dockerfile  config-openmaptiles.json  process-openmaptiles.lua
tile_server/scripts/: build-deps.sh
