[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
utility.workspace = true

# utility
indexmap.workspace = true

# serialization
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
schemars.workspace = true

# date and time
chrono.workspace = true
