[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
name = "web"
path = "src/lib.rs"

[dependencies]
model.workspace = true
database.workspace = true
public_transport.workspace = true
utility.workspace = true
gtfs.workspace = true
gbfs.workspace = true
deutsche_bahn.workspace = true

# utility
itertools.workspace = true

# logging
env_logger.workspace = true
log.workspace = true

# async runtime
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# web server
axum.workspace = true
axum-extra.workspace = true
tower-http.workspace = true
tower-cookies.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
headers.workspace = true

# serialization
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
schemars.workspace = true

# date and time
chrono.workspace = true
